@@ -36,6 +36,7 @@
 * Added missing header include for assert().
 * Fixed wrong acceleration calculation.
 * Added many sphere tests to Benchmark.
+* Improved Benchmark by removing all spheres at once.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
